--- a/Seed/Seed.vcxproj
+++ b/Seed/Seed.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="Components.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="FileSystem.cpp" />
     <ClCompile Include="Identifiable.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
@@ -65,6 +66,7 @@
     <ClInclude Include="Components.h" />
     <ClInclude Include="DefaultScene.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="FileSystem.h" />
     <ClInclude Include="Identifiable.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
