--- a/Seed/Seed.vcxproj
+++ b/Seed/Seed.vcxproj
@@ -170,7 +170,7 @@
       <ForcedIncludeFiles>StdAfx.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>lib\assimp-vc140-mt.lib;lib\SDL2.lib;lib\SDL2main.lib;lib\SDL2test.lib;lib\glew32.lib;lib\glew32s.lib;OpenGL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>lib\assimp-vc140-mt.lib;lib\SDL2.lib;lib\SDL2main.lib;lib\SDL2test.lib;lib\glew32.lib;lib\glew32s.lib;lib\FreeImage.lib;OpenGL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -201,7 +201,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>lib\assimp-vc140-mt.lib;lib\SDL2.lib;lib\SDL2main.lib;lib\SDL2test.lib;lib\glew32.lib;lib\glew32s.lib;OpenGL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>lib\assimp-vc140-mt.lib;lib\SDL2.lib;lib\SDL2main.lib;lib\SDL2test.lib;lib\glew32.lib;lib\glew32s.lib;lib\FreeImage.lib;OpenGL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
