--- a/Seed/Seed.vcxproj
+++ b/Seed/Seed.vcxproj
@@ -101,6 +101,10 @@
     <ClInclude Include="Time.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\Basic.fs" />
+    <None Include="shaders\Basic.vs" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{542C1185-EEAE-45E5-986A-BE77FED34649}</ProjectGuid>
