--- a/Seed/Seed.vcxproj.filters
+++ b/Seed/Seed.vcxproj.filters
@@ -211,9 +211,6 @@
     <ClInclude Include="CameraObject.h">
       <Filter>Objects</Filter>
     </ClInclude>
-    <ClInclude Include="CameraScript.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -261,6 +258,12 @@
     </ClInclude>
     <ClInclude Include="RenderQueue.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraMovementScript.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="GameScript.h">
+      <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
