--- a/Seed/Seed.vcxproj
+++ b/Seed/Seed.vcxproj
@@ -106,8 +106,8 @@
     <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\Basic.fs" />
-    <None Include="shaders\Basic.vs" />
+    <None Include="shaders\Basic.frag" />
+    <None Include="shaders\Basic.vert" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
