--- a/Seed/Seed.vcxproj.filters
+++ b/Seed/Seed.vcxproj.filters
@@ -270,10 +270,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\Basic.fs">
+    <None Include="shaders\Basic.frag">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="shaders\Basic.vs">
+    <None Include="shaders\Basic.vert">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
