--- a/Seed/Seed.vcxproj.filters
+++ b/Seed/Seed.vcxproj.filters
@@ -288,5 +288,11 @@
     <None Include="shaders\Basic.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="shaders\Skybox.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\Skybox.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
