--- a/Seed/Seed.vcxproj
+++ b/Seed/Seed.vcxproj
@@ -116,8 +116,11 @@
     <None Include="shaders\Basic.frag" />
     <None Include="shaders\Basic.vert" />
     <None Include="shaders\EquirectangularToCubemap.frag" />
+    <None Include="shaders\PrecalculateBRDFIntegrationMap.frag" />
+    <None Include="shaders\PrecalculateEnvironmentMap.frag" />
     <None Include="shaders\SimplePosition.vert" />
     <None Include="shaders\PrecalculateIrradiance.frag" />
+    <None Include="shaders\SimplePosition2D.vert" />
     <None Include="shaders\Skybox.frag" />
     <None Include="shaders\Skybox.vert" />
   </ItemGroup>
