--- a/Seed/Seed.vcxproj
+++ b/Seed/Seed.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="EnvironmentalMap.cpp" />
     <ClCompile Include="FileSystem.cpp" />
+    <ClCompile Include="Framebuffer.cpp" />
     <ClCompile Include="Identifiable.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
@@ -53,6 +54,7 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderCompiler.cpp" />
     <ClCompile Include="ShaderFactory.cpp" />
+    <ClCompile Include="SimpleMesh.cpp" />
     <ClCompile Include="Skybox.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -76,6 +78,7 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="EnvironmentalMap.h" />
     <ClInclude Include="FileSystem.h" />
+    <ClInclude Include="Framebuffer.h" />
     <ClInclude Include="GameScript.h" />
     <ClInclude Include="Identifiable.h" />
     <ClInclude Include="imgui\imconfig.h" />
@@ -104,6 +107,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderCompiler.h" />
     <ClInclude Include="ShaderFactory.h" />
+    <ClInclude Include="SimpleMesh.h" />
     <ClInclude Include="Skybox.h" />
     <ClInclude Include="stb\stb_image.h" />
     <ClInclude Include="stdafx.h" />
@@ -123,6 +127,7 @@
     <None Include="shaders\SimplePosition2D.vert" />
     <None Include="shaders\Skybox.frag" />
     <None Include="shaders\Skybox.vert" />
+    <None Include="shaders\ToneMapping.frag" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
