--- a/Seed/Seed.vcxproj
+++ b/Seed/Seed.vcxproj
@@ -62,6 +62,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SubMesh.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TextureCubeMap.cpp" />
     <ClCompile Include="Time.cpp" />
@@ -115,6 +116,7 @@
     <ClInclude Include="Skybox.h" />
     <ClInclude Include="stb\stb_image.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="SubMesh.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureCubeMap.h" />
     <ClInclude Include="Time.h" />
