--- a/Seed/Seed.vcxproj
+++ b/Seed/Seed.vcxproj
@@ -123,9 +123,11 @@
     <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\Basic.frag" />
-    <None Include="shaders\Basic.vert" />
+    <None Include="shaders\Gbuffer.frag" />
+    <None Include="shaders\GBuffer.vert" />
     <None Include="shaders\EquirectangularToCubemap.frag" />
+    <None Include="shaders\PBR.frag" />
+    <None Include="shaders\PBR.vert" />
     <None Include="shaders\PrecalculateBRDFIntegrationMap.frag" />
     <None Include="shaders\PrecalculateEnvironmentMap.frag" />
     <None Include="shaders\SimpleCopy.frag" />
