--- a/Seed/Seed.vcxproj.filters
+++ b/Seed/Seed.vcxproj.filters
@@ -372,5 +372,8 @@
     <None Include="shaders\PBR_IlluminationGlobal.frag">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="shaders\SimpleTexCoords.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
